--- a/admin-springboot-clientb/src/main/resources/application.properties
+++ b/admin-springboot-clientb/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=clientb
 server.port=8082
+spring.boot.admin.routes.endpoints:env,metrics,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream
